fix descriptions in dark mode

--- a/storybook/.storybook/docs.css
+++ b/storybook/.storybook/docs.css
@@ -1,3 +1,7 @@
 .dark .docs-story {
   background: #161616;
 }
+
+.dark .sbdocs-p {
+  color: #161616;
+}
